--- a/LabWebAppBlazor/Components/App.razor
+++ b/LabWebAppBlazor/Components/App.razor
@@ -15,6 +15,9 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="resulado.js"></script>
 </body>
 
 </html>
