--- a/LabWebAppBlazor/Components/Layout/MainLayout.razor
+++ b/LabWebAppBlazor/Components/Layout/MainLayout.razor
@@ -10,13 +10,15 @@
     </div>
 
     <main>
-        <div class="top-row px-4 d-flex justify-content-between align-items-center">
+        @* <div class="top-row px-4 d-flex justify-content-between align-items-center">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
             <button class="btn btn-link text-danger" @onclick="CerrarSesion">Cerrar sesión</button>
-        </div>
+        </div> *@
 
         <article class="content px-4">
-            @Body
+            <main class="flex-fill p-4">
+                @Body
+            </main>
         </article>
     </main>
 </div>
@@ -26,6 +28,15 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+<HeadContent>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="ticket.js"></script>
+    <script src="resulado.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+
+</HeadContent>
 
 @code {
     private async Task CerrarSesion()
