--- a/LabWebAppBlazor/Components/Pages/Examenes.razor
+++ b/LabWebAppBlazor/Components/Pages/Examenes.razor
@@ -71,7 +71,7 @@ else
                         <td>@examen.Tecnica</td>
                         <td>@(examen.Precio?.ToString("C") ?? "-")</td>
                         <td>
-                            <button class="btn btn-sm btn-info" @onclick="() => EditarExamen(examen.IdExamen)">Editar</button>
+                            <button class="btn btn-sm btn-warning me-2" @onclick="() => EditarExamen(examen.IdExamen)">Editar</button>
                             <button class="btn btn-sm btn-danger" @onclick="() => AnularExamen(examen.IdExamen)">Anular</button>
                         </td>
 
