--- a/LabWebAppBlazor/Components/Layout/NavMenu.razor
+++ b/LabWebAppBlazor/Components/Layout/NavMenu.razor
@@ -33,6 +33,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="reactivos" Match="NavLinkMatch.All">
+                <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Reactivos
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="examenes" Match="NavLinkMatch.All">
                 <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Exámenes
             </NavLink>
