--- a/LabWebAppBlazor/Components/Pages/Reactivos.razor
+++ b/LabWebAppBlazor/Components/Pages/Reactivos.razor
@@ -28,8 +28,8 @@
     </div>
     <div class="col-md-4 mt-4 d-flex gap-2">
         <button class="btn btn-primary" @onclick="BuscarReactivos">Buscar</button>
-        <button class="btn btn-success" @onclick="MostrarModalNuevo"> Agregar Reactivo</button>
-
+        <button class="btn btn-success" @onclick="MostrarModalNuevo">Agregar Reactivo</button>
+        <button class="btn btn-secondary" @onclick="@(() => Navigation.NavigateTo("/ingreso-stock"))">Ingresar Stock</button>
     </div>
 </div>
 
